[gd_scene load_steps=12 format=3 uid="uid://cvrm00cnpi2do"]

[ext_resource type="Theme" uid="uid://bahunhngepcwh" path="res://Resources/ui-theme.tres" id="1_ev4kd"]
[ext_resource type="Script" path="res://Scenes/stats_screen.gd" id="1_stej8"]
[ext_resource type="Texture2D" uid="uid://6x75b45f4vsp" path="res://Assets/main-spritesheet.png" id="3_3s8br"]

[sub_resource type="AtlasTexture" id="AtlasTexture_regt6"]
atlas = ExtResource("3_3s8br")
region = Rect2(20, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc6fs"]
atlas = ExtResource("3_3s8br")
region = Rect2(36, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y6xp"]
atlas = ExtResource("3_3s8br")
region = Rect2(20, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ffy"]
atlas = ExtResource("3_3s8br")
region = Rect2(36, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8j7j"]
atlas = ExtResource("3_3s8br")
region = Rect2(20, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgmmq"]
atlas = ExtResource("3_3s8br")
region = Rect2(36, 3, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaxhj"]
atlas = ExtResource("3_3s8br")
region = Rect2(96, 128, 27, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l4vv"]
atlas = ExtResource("3_3s8br")
region = Rect2(64, 128, 27, 11)

[node name="StatsScreen" type="Node2D"]
script = ExtResource("1_stej8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(2, 2)

[node name="SpeedLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 82.0
offset_right = 133.5
offset_bottom = 110.0
theme = ExtResource("1_ev4kd")
text = "Speed		"

[node name="StaminaLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 110.5
offset_right = 133.5
offset_bottom = 138.5
theme = ExtResource("1_ev4kd")
text = "Stamina	"

[node name="RegenLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 140.0
offset_right = 133.5
offset_bottom = 168.0
theme = ExtResource("1_ev4kd")
text = "Regen		"

[node name="SpeedValue" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 111.0
offset_top = 82.0
offset_right = 128.0
offset_bottom = 110.0
theme = ExtResource("1_ev4kd")
text = "1"

[node name="StaminaValue" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 111.0
offset_top = 110.5
offset_right = 127.0
offset_bottom = 138.5
theme = ExtResource("1_ev4kd")
text = "1"

[node name="RegenValue" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 111.0
offset_top = 140.0
offset_right = 128.0
offset_bottom = 168.0
theme = ExtResource("1_ev4kd")
text = "1"

[node name="SpeedAddButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 124.0
offset_top = 86.0
offset_right = 133.0
offset_bottom = 95.0
scale = Vector2(2, 2)
theme = ExtResource("1_ev4kd")
texture_normal = SubResource("AtlasTexture_regt6")
texture_hover = SubResource("AtlasTexture_rc6fs")

[node name="StaminaAddButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 124.0
offset_top = 114.5
offset_right = 133.0
offset_bottom = 123.5
scale = Vector2(2, 2)
theme = ExtResource("1_ev4kd")
texture_normal = SubResource("AtlasTexture_4y6xp")
texture_hover = SubResource("AtlasTexture_w5ffy")

[node name="RegenAddButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 124.0
offset_top = 143.5
offset_right = 133.0
offset_bottom = 152.5
scale = Vector2(2, 2)
theme = ExtResource("1_ev4kd")
texture_normal = SubResource("AtlasTexture_s8j7j")
texture_hover = SubResource("AtlasTexture_vgmmq")

[node name="AddXPButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 330.0
offset_top = 102.5
offset_right = 403.0
offset_bottom = 134.5
theme = ExtResource("1_ev4kd")
text = "Add XP"

[node name="XPLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 57.0
offset_right = 49.5
offset_bottom = 85.0
theme = ExtResource("1_ev4kd")
text = "XP :"
scroll_active = false

[node name="XPValue" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 52.5
offset_top = 57.0
offset_right = 125.5
offset_bottom = 85.0
theme = ExtResource("1_ev4kd")
text = "0"

[node name="LevelLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 39.0
offset_right = 85.5
offset_bottom = 67.0
theme = ExtResource("1_ev4kd")
text = "Level :"
scroll_active = false

[node name="Levelvalue" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 88.5
offset_top = 39.0
offset_right = 131.5
offset_bottom = 67.0
theme = ExtResource("1_ev4kd")
text = "1"

[node name="AddXPButton2" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 258.0
offset_top = 151.5
offset_right = 285.0
offset_bottom = 162.5
scale = Vector2(2, 2)
theme = ExtResource("1_ev4kd")
texture_normal = SubResource("AtlasTexture_yaxhj")
texture_hover = SubResource("AtlasTexture_5l4vv")

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 11.0
offset_top = 4.5
offset_right = 278.0
offset_bottom = 44.5
theme = ExtResource("1_ev4kd")
theme_override_font_sizes/normal_font_size = 24
text = "Grace of Lunaria"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 102.0
offset_right = 182.5
offset_bottom = 114.0
theme = ExtResource("1_ev4kd")
theme_override_font_sizes/normal_font_size = 8
text = "Grants More Time In Incantations"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 131.0
offset_right = 182.5
offset_bottom = 143.0
theme = ExtResource("1_ev4kd")
theme_override_font_sizes/normal_font_size = 8
text = "Increases Skips In Incantations"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 10.5
offset_top = 160.0
offset_right = 186.5
offset_bottom = 172.0
theme = ExtResource("1_ev4kd")
theme_override_font_sizes/normal_font_size = 8
text = "Recovers Skips Faster In Incantations"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="pressed" from="Control/SpeedAddButton" to="." method="_on_speed_add_button_pressed"]
[connection signal="pressed" from="Control/StaminaAddButton" to="." method="_on_stamina_add_button_pressed"]
[connection signal="pressed" from="Control/RegenAddButton" to="." method="_on_regen_add_button_pressed"]
[connection signal="pressed" from="Control/AddXPButton" to="." method="_on_add_xp_button_pressed"]
[connection signal="pressed" from="Control/AddXPButton2" to="." method="_on_add_xp_button_2_pressed"]
